attempt to fix alignment

--- a/screen.css
+++ b/screen.css
@@ -11,7 +11,7 @@ header {
 }
 
 nav {
-    position: absolute;
+    position: fixed;
     left: 656px;
     top: 30px;
 }
